# UI-CWK

./: .gitignore  CMakeLists.txt  README.md
complinceDashboardPage/test_project/: CMakeLists.txt  ComplianceDashboard.cpp  ComplianceDashboard.hpp  dataset.cpp  dataset.hpp  main.cpp
database/: database.sqlite-shm  database.sqlite-wal
example_qt_app/: CMakeLists.txt
naputts_prev_cwk/: main.cpp
sandbox/example_qt_app/: README.md
sandbox/naputts_prev_cwk/: README.md  dataset.cpp  main.cpp
src/: application.hpp  dashboard.hpp  main.cpp  navBar.hpp  pollutantOverview.cpp  pollutantOverview.hpp  window.hpp
src/cards/: card.cpp  card.hpp  pageOverview.cpp  pageOverview.hpp  pointInfo.cpp  pointInfo.hpp
src/charts/: autoScaleDateFLoatChart.cpp  autoScaleDateFLoatChart.hpp  autoScalingPollutantContaminationGraph.cpp  autoScalingPollutantContaminationGraph.hpp  baseChart.cpp  baseChart.hpp  complianceColourCodedLineChart.hpp  complianceColourCodedLineGraph.cpp  complianceColourCodedLineGraph.hpp  complianceDial.cpp  complianceDial.hpp  complianceOverviewChart.hpp  dateFloatChart.cpp  dateFloatChart.hpp  pollutantContaminationGraph.cpp  pollutantContaminationGraph.hpp  pollutantContaminationGraphBase.cpp  pollutantContaminationGraphBase.hpp  staticScalingPollutantContaminationGraph.cpp  staticScalingPollutantContaminationGraph.hpp
src/core/: application.cpp  application.hpp  dbConnection.hpp  mainWindow.hpp  pollutantContamination.hpp  window.cpp  window.hpp
src/database/: database.cpp  database.hpp  dbConnection.cpp  dbConnection.hpp  sync.hpp  utils.cpp  utils.hpp
src/migration/: consumer.cpp  consumer.hpp  main.cpp  migrate.hpp  migration.cpp  producer.hpp  queue.hpp
src/pages/: complianceDashboard.cpp  complianceDashboard.hpp  flourinatedCompound.cpp  flourinatedCompound.hpp  mainDashboard.cpp  mainDashboard.hpp  page.cpp  page.hpp  persistentOrganicPollutants.cpp  persistentOrganicPollutants.hpp  pollutantOverview.cpp  pollutantOverview.hpp
src/sample/: PollutantSample.cpp  PollutantSample.hpp  WaterSample.cpp  WaterSample.hpp  dataset.cpp
stylesheets/: stylesheet.qss
translations/: waterQuality_de.ts  waterQuality_en.ts  waterQuality_es.ts  waterQuality_fr.ts
